--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
   "author": "Allan BUSI",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.30.3",
     "body-parser": "^1.20.2",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22"
+    "mysql": "^2.18.1",
+    "mysql2": "^3.3.3",
+    "nodemon": "^2.0.22",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.0.2"
