--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "argon2": "^0.30.3",
+    "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
@@ -18,6 +19,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.3.3",
     "nodemon": "^2.0.22",
+    "stripe": "^12.8.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
